# FP2026

./: FP2026.cabal  alkalmazottData.txt  eload11_1.hs  eloadas11.hs  eloadas8.hs  parcialis_gyakorlatok.hs  tetelek.hs
01.labor/: lab1_C.hs
02.labor/: lab2_C.hs  labor2.hs
03.labor/: labor3.hs
04.labor/: labor4.hs
05.labor/: labor5.hs
06.labor/: labor6.hs
07.labor/: bases.txt  binaryBase.txt  hamming.txt  input.txt  ki1.txt  ki2.txt  lab7.hs  labor7.hs  lucky.txt  primosztok.txt  sorted.txt
08.labor/: lab8.hs  labor8.hs  rendezett_varosok.txt  sc_adatok.txt  varosok.txt
Tetelek/: Tetel1.docx  Tetel2.docx  Tetel3.docx  infoD.docx
app/: Main.hs
