cabal-version:      2.4
name:               FP2026
version:            0.1.0.0
build-type:         Simple

executable lab7
    main-is:          07.labor/lab7.hs
    build-depends:    base >=4.14 && <5,
                      bytestring,
                      random,
                      directory
    default-language: Haskell2010
    ghc-options:      -Wall -O2