cabal-version: 2.4
name: FP2026
version: 0.1.0.0
build-type: Simple

library
  exposed-modules:
    Lab7
    Lab8

  hs-source-dirs:
    07.labor
    08.labor

  build-depends:
    base >=4.14 && <5,
    bytestring,
    directory,
    random,

  default-language: Haskell2010
  ghc-options:
    -Wall
    -O2

executable lab7
  main-is: Main.hs
  hs-source-dirs:
    app

  build-depends:
    FP2026,
    base >=4.14 && <5,
    filepath,

  default-language: Haskell2010
  ghc-options:
    -Wall
    -O2

executable lab8
  main-is: Main.hs
  hs-source-dirs:
    app

  build-depends:
    FP2026,
    base >=4.14 && <5,
    filepath,

  default-language: Haskell2010
  ghc-options:
    -Wall
    -O2